package handlers;
import javafx.event.ActionEvent;
import javafx.event.EventHandler;
public class BtnMonster1Handler implements EventHandler<ActionEvent> {


	@Override
	public void handle(ActionEvent event) {
		
	}

}
