@startuml

title __HANDLERS's Class Diagram__\n

  package handlers {
    class BtnMonster1Handler {
        + BtnMonster1Handler()
        + handle()
    }
  }
  

  package handlers {
    class QuitBtnHandler {
        + QuitBtnHandler()
        + handle()
    }
  }
  

  BtnMonster1Handler -up-|> EventHandler
  QuitBtnHandler -up-|> EventHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
